# Hackathon-Doc-generator

./: .gitignore  OUTPUT_STRUCTURE.md  README.md  USAGE.md  api_server.py  package-lock.json  pyproject.toml  technical_documentation.json  technical_documentation.md  test_connection.py
docgen-frontend/: index.html  package-lock.json  package.json
docgen-frontend/src/: App.tsx  index.css
docs/: API_REFERENCE.md  ARCHITECTURE.md  EXAMPLES.md  README.md
docs/diagrams/: architecture.mermaid
src/doc_generator/: crew.py  geval_metrics.py  human_in_the_loop.py  main.py
src/doc_generator/config/: agents.yaml  tasks.yaml
src/doc_generator/models/: __init__.py  code_structure.py  documentation_output.py
src/doc_generator/tools/: __init__.py  code_analyzer.py  config_parser.py  dependency_analyzer.py  guardrails.py  language_detector.py  memory_reader.py  postgres_storage.py  shared_memory.py  structure_extractor.py  test_analyzer.py
